<resources>

    <string name="app_name">CourseProjectJava</string>

    <string name="shopWelcome">Welcome to Cryptid Co.</string>

    <string name="shopDetails">Your one stop shop for Cryptid info and Merch!</string>

    <string name="continueOrLogin">Login or Continue as guest</string>

    <string name="buttonLogin">Login</string>

    <string name="buttonLogout">Logout</string>

    <string name="buttonGuest">Continue as Guest</string>

    <string name="noAccount">Don\'t have an account?</string>

    <string name="createAccount">Click here to create an account</string>

    <string name="firstName">First Name</string>

    <string name="lastName">Last Name</string>

    <string name="userName">UserName</string>

    <string name="password">Password</string>

    <string name="createdAccount">Create Account</string>

    <string name="cryptidInformation">Cryptids are animals that may exist but whose existence is disputed and unproven</string>

    <string name="bigfootbio">Bigfoot is commonly referred to as Sasquatch. Commonly reported sightings occur in the forests of North America</string>

    <string name="mothmanbio">Reportedly seen around Point Pleasant, WV. The mothman has been reported commonly before a disaster occurs.</string>

    <string name="chupacabrabio">Chupacabra meaning \"\goat sucker\"\ in spanish is known to attack livestock.</string>

    <string name="nessiebio">Affectionately referred to as Nessie. Said to inhabit Loch Ness in the Scottish Highlands.</string>

    <string-array name="cryptids">
        <item>No selection</item>
        <item>BigFoot</item>
        <item>MothMan</item>
        <item>Chupacabra</item>
        <item>Loch Ness Monster</item>
    </string-array>

    <string-array name="sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string-array name="quantities">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="items">
        <item>T-shirt</item>
        <item>Coffee Mug</item>
        <item>Baseball Cap</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>